--- a/css/styles.css
+++ b/css/styles.css
@@ -51,6 +51,7 @@ h1 {
     font-size:25px;
     margin:10px;
     overflow:hidden;
+    margin-top: 40px;
 }
 p{  
     margin-top: 1em;
@@ -61,7 +62,7 @@ p{
 .internal{  
     margin-top: 0px;
     font-size: 12px;
-    line-height: 5px;
+    line-height: 10px;
 }
 
 .wrapper {
@@ -101,7 +102,8 @@ p{
     width: 100%;
     max-width: 400px;
     margin: 0 auto;
-    padding-bottom: 10px;
+    padding-top: 20px;
+    padding-bottom: 20px;
 }
 #glasses1{
     background-image: url("../images/glasses1.png");
